----------------------------------------------------------------------
 OmegaT 5.5.0
----------------------------------------------------------------------
  1 Enhancement
  0 Bug fixes
  0 Localisation updates
----------------------------------------------------------------------
5.5.0 vs 5.4.1

  Implemented requests:

  - Improve access speed for uncompressed StarDict dictionaries
  https://sourceforge.net/p/omegat/feature-requests/1532/

----------------------------------------------------------------------
 OmegaT 5.4.1 (2020-12-15)
----------------------------------------------------------------------
  0 Enhancements
  1 Bug fix
  0 Localisation updates
----------------------------------------------------------------------
5.4.1 vs 5.4.0

  Bug fixes:

  - Default color for untranslated segments is wrong
  https://sourceforge.net/p/omegat/bugs/1031/

----------------------------------------------------------------------
 OmegaT 5.4.0 (2020-12-12)
----------------------------------------------------------------------
  7 Enhancements
  8 Bug fixes
  10 Localisation updates
----------------------------------------------------------------------
5.4.0 vs 5.3.0

  Implemented requests:

  - Sync file deletions from repository to project
  https://sourceforge.net/p/omegat/feature-requests/1499/

  - Show branding in About dialog
  https://sourceforge.net/p/omegat/feature-requests/1511/

  - XLIFF: update target tag's state attribute according to
    translation status
  https://sourceforge.net/p/omegat/feature-requests/1506/

  - Externalize default color definitions
  https://sourceforge.net/p/omegat/feature-requests/1514/

  - Remove discontinued Yandex.Translate MT connector
  https://sourceforge.net/p/omegat/feature-requests/1522/

  - Show comment/property value when search result comes from comment or other property
  https://sourceforge.net/p/omegat/feature-requests/1054/

  - Allow dictionary LingoDSL format with DictZip compression