@@ -2589,6 +2589,9 @@ COLOR_MATCHES_INS_ACTIVE=Matches Inserted Active
 COLOR_MATCHES_INS_INACTIVE=Matches Inserted Inactive
 COLOR_MATCHES_DEL_ACTIVE=Matches Deleted Active
 COLOR_MATCHES_DEL_INACTIVE=Matches Deleted Inactive
+COLOR_GLOSSARY_SOURCE=Glossary source
+COLOR_GLOSSARY_TARGET=Glossary translation
+COLOR_GLOSSARY_NOTE=Glossary note
 COLOR_HYPERLINK=Hyperlinks
 COLOR_SEARCH_FOUND_MARK=Search Found Mark
 COLOR_SEARCH_REPLACE_MARK=Search Replaced Mark
