@@ -2473,6 +2473,9 @@ COLOR_MATCHES_INS_ACTIVE=Correspondances ins\u00e9r\u00e9es actives
 COLOR_MATCHES_INS_INACTIVE=Correspondances ins\u00e9r\u00e9es inactives
 COLOR_MATCHES_DEL_ACTIVE=Correspondances supprim\u00e9es actives
 COLOR_MATCHES_DEL_INACTIVE=Correspondances supprim\u00e9es inactives
+COLOR_GLOSSARY_SOURCE=Glossaires: source
+COLOR_GLOSSARY_TARGET=Glossaires: traduction
+COLOR_GLOSSARY_NOTE=Glossaires: note
 COLOR_HYPERLINK=Liens hypertexte
 COLOR_SEARCH_FOUND_MARK=Texte recherch\u00e9
 COLOR_SEARCH_REPLACE_MARK=Texte remplac\u00e9
