@@ -95,6 +95,9 @@ public final class Styles {
         COLOR_TERMINOLOGY(UIManager.getColor("OmegaT.terminology")),
         COLOR_MATCHES_CHANGED(UIManager.getColor("OmegaT.matchesChanged")),
         COLOR_MATCHES_UNCHANGED(UIManager.getColor("OmegaT.matchesUnchanged")),
+        COLOR_GLOSSARY_SOURCE((Color) null),
+        COLOR_GLOSSARY_TARGET((Color) null),
+        COLOR_GLOSSARY_NOTE((Color) null),
         COLOR_MATCHES_DEL_ACTIVE((Color) null),
         COLOR_MATCHES_DEL_INACTIVE((Color) null),
         COLOR_MATCHES_INS_ACTIVE(UIManager.getColor("OmegaT.matchesInsActive")),
