@@ -1,7 +1,7 @@
 ----------------------------------------------------------------------
  OmegaT 5.5.0
 ----------------------------------------------------------------------
-  1 Enhancement
+  2 Enhancements
   0 Bug fixes
   0 Localisation updates
 ----------------------------------------------------------------------
@@ -11,6 +11,9 @@
 
   - Improve access speed for uncompressed StarDict dictionaries
   https://sourceforge.net/p/omegat/feature-requests/1532/
+
+  - Make glossary colors customizable
+  https://sourceforge.net/p/omegat/feature-requests/1537/
 
 ----------------------------------------------------------------------
  OmegaT 5.4.1 (2020-12-15)
